--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	
+	background: linear-gradient(to right,rgb(51, 73, 162),rgb(133, 80, 128)); 
 }
 h1{
 	font-family: 'Luckiest Guy', cursive;
@@ -7,6 +7,9 @@ h1{
 p{
 	font-family: 'Fredoka One', cursive;
 		font-size: 2em;
+}
+label{
+	font-family: 'Poppins', cursive;
 }
 .title{
    
@@ -21,8 +24,8 @@ p{
 	text-align: center;
 	display: grid;
 	grid-template-columns: 1fr 1fr ;
-	border-radius: 5px; 
-	border: 5px solid black;
+	/*border-top: 1px solid black;*/
+   
 	
 }
 
@@ -31,12 +34,26 @@ p{
 	align-content: center;
 }
 
+.bgtitle{
 
+  
+}
 
+.border{
+	border-radius: 5px; 
+	border: 15px solid black;
+}
 
+.hr{
+	color: black;
+	width: 85%;
+}
 
+.parrafounico{
 
+ text-align: center;
 
+}
 @-webkit-keyframes title {
 0%{
 	margin-left: 0px;
