--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ label{
 .title{
    
 	text-align: center;
-	-webkit-animation: title 5s ;
+	-webkit-animation: title 2s ;
 	
 	   
 }
@@ -55,17 +55,18 @@ label{
 
 }
 @-webkit-keyframes title {
+
+
+
 0%{
+	margin-left: 1000px;
+}
+
+33%{
 	margin-left: 0px;
 }
-25%{
-	margin-left: 550px;
-}
-50%{
-	margin-left: 1100px;
-}
-75%{
-	margin-left: 550px;
+66%{
+	margin-right: 1000px;
 }
 100%{
 	margin-left: 0px;
