--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body{
 	background: linear-gradient(to right,rgb(51, 73, 162),rgb(133, 80, 128)); 
 }
 h1{
+	
 	font-family: 'Luckiest Guy', cursive;
 }
 p{
 	font-family: 'Fredoka One', cursive;
-		font-size: 2em;
+		font-size: 2.2em;
 }
 label{
 	color: white;
@@ -15,7 +16,7 @@ label{
 .title{
    
 	text-align: center;
-	-webkit-animation: title 2s ;
+	-webkit-animation: title 3s  ;
 	
 	   
 }
@@ -55,19 +56,24 @@ label{
  text-align: center;
 
 }
+.divtitle{
+	text-align: center;
+}
 @-webkit-keyframes title {
 
 
 
 0%{
-	margin-left: 1000px;
+    margin: 0;
 }
 
 33%{
-	margin-left: 0px;
+
+	margin-top: 100px;
 }
 66%{
-	margin-right: 1000px;
+	
+	margin-bottom:  100px;
 }
 100%{
 	margin-left: 0px;
